Semantic text default inference id setting (#143486)